--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bug_tracking_system?serverTimezone=Europe/Moscow
 spring.datasource.username=mysql
 spring.datasource.password=mysql
+
+spring.freemarker.expose-request-attributes=true
