--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.username=mysql
 spring.datasource.password=mysql
 
 spring.freemarker.expose-request-attributes=true
+spring.freemarker.suffix= .ftl
