--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,8 +1,24 @@
 server.port = 8090
-useUnicode=true&serverTimezone=UTC&useSSL=false
+# To See H2 Console in Browser:
+# http://localhost:8090/h2-console
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
+# ===============================
+# DB
+# ===============================
+
+spring.datasource.url=jdbc:h2:mem:java_bug_tracking
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=123
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bug_tracking_system?serverTimezone=Europe/Moscow
-spring.datasource.username=mysql
-spring.datasource.password=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 
